[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Fonts/GWIBBLE_.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Graphics/UI/Roll_PC.png" type="Texture" id=3]
[ext_resource path="res://Graphics/UI/Shoot_PC.png" type="Texture" id=4]
[ext_resource path="res://Graphics/UI/UseItem_PC.png" type="Texture" id=5]
[ext_resource path="res://Graphics/UI/SwitchWeaponPrevious_PC.png" type="Texture" id=6]
[ext_resource path="res://Graphics/UI/SwitchWeaponNext_PC.png" type="Texture" id=7]
[ext_resource path="res://Graphics/UI/Roll_PlayStation.png" type="Texture" id=8]
[ext_resource path="res://Graphics/UI/Shoot_PlayStation.png" type="Texture" id=9]
[ext_resource path="res://Graphics/UI/UseItem_PlayStation.png" type="Texture" id=10]
[ext_resource path="res://Graphics/UI/SwitchWeapon_PlayStation.png" type="Texture" id=11]
[ext_resource path="res://Graphics/UI/ItemSlot.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Weapons/Weapons.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0.192157, 0.113725, 0.054902, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Control" parent="."]
margin_left = 4.21053
margin_top = 42.1053
margin_right = 44.2105
margin_bottom = 82.1053
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="Score"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Health" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="Health"]
margin_left = 5.41647
margin_top = 9.28537
margin_right = 269.416
margin_bottom = 41.2854
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthTween" type="Tween" parent="Health"]

[node name="ControlPrompts" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="Control" parent="ControlPrompts"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Roll" type="Sprite" parent="ControlPrompts/PC"]
position = Vector2( 993.193, 27.1683 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ControlPrompts/PC/Roll"]
margin_left = -219.916
margin_top = -32.5803
margin_right = -68.9163
margin_bottom = 42.4197
custom_fonts/font = SubResource( 2 )
text = "ROLL"

[node name="Shoot" type="Sprite" parent="ControlPrompts/PC"]
position = Vector2( 104.469, 473.076 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="UseItem" type="Sprite" parent="ControlPrompts/PC"]
visible = false
position = Vector2( 61.3225, 478.527 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 5 )

[node name="SwitchWeaponsPrevious" type="Sprite" parent="ControlPrompts/PC"]
position = Vector2( 31.6328, 547.583 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="SwitchWeaponsNext2" type="Sprite" parent="ControlPrompts/PC"]
position = Vector2( 168.833, 549.246 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="PlayStation" type="Control" parent="ControlPrompts"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Roll" type="Sprite" parent="ControlPrompts/PlayStation"]
position = Vector2( 993.193, 27.1683 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="Label2" type="Label" parent="ControlPrompts/PlayStation/Roll"]
margin_left = -219.916
margin_top = -32.5803
margin_right = -68.9163
margin_bottom = 42.4197
custom_fonts/font = SubResource( 2 )
text = "ROLL"

[node name="Shoot" type="Sprite" parent="ControlPrompts/PlayStation"]
position = Vector2( 104.469, 473.076 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="UseItem" type="Sprite" parent="ControlPrompts/PlayStation"]
visible = false
position = Vector2( 61.3225, 478.527 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="SwitchWeaponsPrevious" type="Sprite" parent="ControlPrompts/PlayStation"]
position = Vector2( 31.6328, 547.583 )
rotation = -3.14159
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="SwitchWeaponsNext2" type="Sprite" parent="ControlPrompts/PlayStation"]
position = Vector2( 168.833, 549.246 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="Weapons" type="Control" parent="."]
margin_left = -837.494
margin_top = -4.29593
margin_right = -797.494
margin_bottom = 35.7041

[node name="WeaponSlot" type="Sprite" parent="Weapons"]
position = Vector2( 935.644, 540.309 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 12 )

[node name="WeaponPreview" type="Sprite" parent="Weapons"]
position = Vector2( 937.677, 562.676 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 13 )
vframes = 2
hframes = 2

[node name="AmmoCost" type="Label" parent="Weapons"]
margin_left = 908.742
margin_top = 497.723
margin_right = 969.742
margin_bottom = 515.723
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.129412, 0.0823529, 0.0313726, 1 )
text = "COST: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Damage" type="Label" parent="Weapons"]
margin_left = 963.073
margin_top = 540.219
margin_right = 978.073
margin_bottom = 578.219
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.298039, 0.298039, 1 )
text = "1"
